--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,15 @@
-
 body {
   background-color: var(--bg-color);
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+  text-rendering: geometricPrecision;
+  image-rendering: optimizeSpeed;
 }
