--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,11 @@ body {
   text-rendering: geometricPrecision;
   image-rendering: optimizeSpeed;
 }
+
+a[type="button"] {
+  background-color: rgb(59, 59, 59);
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 1rem;
+  text-decoration: none;
+}
