--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,8 +10,8 @@ body {
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  text-rendering: geometricPrecision;
-  image-rendering: optimizeSpeed;
+  text-rendering: optimizeLegibility;
+  image-rendering: optimizeQuality;
 }
 
 a[type="button"] {
@@ -20,4 +20,12 @@ a[type="button"] {
   color: white;
   border-radius: 1rem;
   text-decoration: none;
+}
+
+input {
+  outline: none;
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 1rem;
+  font-weight: 300;
 }
