add new users images and setting a path on .env

--- a/src/components/cards/FollowupCard/styles.module.scss
+++ b/src/components/cards/FollowupCard/styles.module.scss
@@ -1,5 +1,12 @@
-.button{
+.container {
    background-color: lightgrey;
    color: black;
    border-radius: 20px;
+   img{
+      object-fit: cover;
+   }
+}
+
+.content {
+
 }
