--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,13 +2,38 @@ body {
   background-color: var(--bg-color);
 }
 
+@font-face {
+  font-family: 'Poppins-Medium';
+  src: url('/assets/fonts/Poppins/Poppins-Medium.ttf');
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Poppins-Regular';
+  src: url('/assets/fonts/Poppins/Poppins-Regular.ttf');
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Poppins-Bold';
+  src: url('/assets/fonts/Poppins/Poppins-Bold.ttf');
+  font-style: bold;
+}
+
+@font-face {
+  font-family: 'Poppins-Light';
+  src: url('/assets/fonts/Poppins/Poppins-Light.ttf');
+  font-style: light;
+}
+
+
+
 * {
   padding: 0;
   margin: 0;
   border: 0;
   box-sizing: border-box;
-
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Poppins-Regular;
+  font-style: bold;
 
   text-rendering: optimizeLegibility;
   image-rendering: optimizeQuality;
